# Flight-Sim

./: Analysis.docx  Analysis.md  Design.docx  Design.md  Developing a Coded Solution.md  Flight Characteristics.md  H446-03 Project Tracker.docx  Index.md  Project Proposal.docx  Project Proposal.md  RC-PC.c  README.md  Rendering.md  config.yaml  gen_doc.bat  md2docx.py  mdtemp_Analysis.md  mdtemp_Design.docx  mdtemp_Design.md  mdtemp_Developing a Coded Solution.docx  mdtemp_Developing a Coded Solution.md  mdtemp_Project Proposal.md  raylib_compile_execute.bat  raylib_compile_execute_cpp.bat  ~$final.docx
.obsidian/: app.json  community-plugins.json  hotkeys.json  workspace
.obsidian/plugins/metadata-extractor/: data.json  metadata.json
.obsidian/plugins/obsidian-pandoc/: data.json  main.js
Building/: Requirements.md
Building/Libraries/: AntTweakBar.md  Assimp.md  Imgui.md
Building/Old Requirements/: CMake.md  Requirements.md  vcpkg.md
Building/Old Requirements/Libraries/: Bullet.md  GLEW.md  GLFW.md  GLM.md
Built/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BuildingYourOwnOpenglApp.sln  BuildingYourOwnOpenglApp.vcxproj  BuildingYourOwnOpenglApp.vcxproj.filters  CMakeCache.txt  FlightSim.sln  FlightSim.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-main-Debug.cmd  launch-src-MinSizeRel.cmd  launch-src-Release.cmd
Built/BuildingYourOwnOpenglApp.dir/Debug/: BuildingYourOwnOpenglApp.exe.recipe  BuildingYourOwnOpenglApp.ilk
Built/BuildingYourOwnOpenglApp.dir/Debug/Building.14664876.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Built/FlightSim.dir/Debug/: FlightSim.exe.recipe  FlightSim.ilk
Built/FlightSim.dir/Debug/FlightSim.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Built/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Input/: GLFW Inputs.md  XInput.md
Language/: C++.md  C-C++.md  Java.md  README.md
OpenGL/: 3D Rendering.md  Opening a Window.md
OpenGL/Shaders/: Fragment Shaders.md  Shaders.md  Vertex Shaders.md
Physics/: Baked Physics Format.md  Flight Characteristics.md
Physics/Baked Physics/: Baked Physics Format.md  CFD.md
RC-PC/: Makefile  RC-PC.c  RC-PC.sln
RC-PC/RC-PC/: ColorFragmentShader.fragmentshader  ObjLoader.cpp  ObjLoader.hpp  RC-PC.cpp  RC-PC.vcxproj  RC-PC.vcxproj.filters  TransformVertexShader.vertexshader  loader.cpp  loader.hpp  shader.cpp
RC-PC/RC-PC/x64/Debug/: RC-PC.exe.recipe  RC-PC.ilk  RC-PC.vcxproj.FileListAbsolute.txt  rc-pc.obj.enc  vc142.idb
RC-PC/shaders/: base.fs  base.vs
RC-PC/src/: fullMatrix.cpp  main.cpp  object.cpp
The Process/: Building the Application.md  Documentation and Understanding.md  Quaternions.md  Research and Initial Development.md  Testing the Application.md
Unbuilt/: CMakeLists.txt
Unbuilt/src/: main.cpp
mdtemp/: Analysis.docx  Analysis.md  Design.docx  Design.md  Developing a Coded Solution.docx  Developing a Coded Solution.md
raylib/: README.md
raylib/examples/: Clean  Compile  Reset  Saving  Setup
raylib/examples/core/: core_3d_camera_free.c  core_basic_window.c  core_basic_window.cpp  mouse_drawing.c
raylib/examples/models/: models_cubicmap.c  models_first_person_maze.c  models_geometric_shapes.c  models_skybox.c  models_waving_cubes.c
raylib/examples/shaders/: shaders_basic_lighting.c
(+8 files in other folders)
